<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherActivity">

    <RelativeLayout
        android:id="@+id/loader_main_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/background"
        android:gravity="center"
        android:visibility="visible">

        <ImageView
            android:id="@+id/loader"
            android:layout_width="@dimen/loader_width_height"
            android:layout_height="@dimen/loader_width_height"
            android:src="@mipmap/loader" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/weather_forecast_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/weather_card_margin"
            android:layout_weight=".08"
            card_view:cardCornerRadius="@dimen/weather_card_radius"
            card_view:cardElevation="@dimen/weather_card_elevation">

            <EditText
                android:id="@+id/search_city"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:drawableRight="@android:drawable/ic_menu_search"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/city_padding"
                android:text="@string/default_city" />
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".32"
            android:background="@mipmap/banner"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textSize="@dimen/temp_text_size" />

            <TextView
                android:id="@+id/city_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textSize="@dimen/city_text_size" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/forecast"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".6" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/retry_main_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/retry_btn"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:drawableTop="@mipmap/error"
            android:gravity="center"
            android:text="@string/retry"
            android:textColor="@android:color/white"
            android:textSize="@dimen/retry_text_size" />
    </RelativeLayout>
</RelativeLayout>